@@ -1,16 +1,19 @@
 # Covid-19-Tracker666
 
 ### daily updated repository with representations of data from the [Department of disease control](https://covid19.th-stat.com)
+![Imgur](https://imgur.com/psfWwmy.png)
+#### How to run file.jar
+-Change directory to the file.For java11 you need to specify module path for javaFX The command is:  java --module-path=/path/to/javafx11/lib/ --add-modules javafx.controls,javafx.fxml,javafx.graphics -jar Covid-19-Tracker.jar
 
 #### Guide to use Covid-19-Tracker
 1. Click open in menu bar.
 2. Choose Table to open pie chart.
 3. Click back to close chart.
 
-
 ------
 ## Technology Used
-1. Java and JavaFX 
+1. Java11 
+2. JavaFX
 2. Scene Builder for creating charts in JavaFX.
 
 ### UML diagram
